# kmb

./: CMakeLists.txt  README
include/: state.h
include/command/: clear_set_cmd.h  current.h  dispatcher.h  filter_out_cmd.h  find_index_cmd.h  quit.h  save_kmb_cmd.h  save_to_file_cmd.h  set_win_kmb_cmd.h  stat_win_cmd.h  unknown.h  win_kmb_cmd.h
src/: CMakeLists.txt  main.cpp
src/command/: check_win_cmd.cpp  clear_set_cmd.cpp  current.cpp  dispatcher.cpp  filter_out_cmd.cpp  find_index_cmd.cpp  find_positions_cmd.cpp  generate.cpp  icommand.cpp  initialize.cpp  input_cmd.cpp  load_from_file_cmd.cpp  mark_cmd.cpp  print_cmd.cpp  print_positions_cmd.cpp  print_result_cmd.cpp  quit.cpp  save_kmb_cmd.cpp  save_to_file_cmd.cpp  set_win_kmb_cmd.cpp  stat_win_cmd.cpp  unknown.cpp  win_in_cmd.cpp  win_kmb_cmd.cpp
src/engine/: constants.cpp  util.cpp
src/engine/core/: All7s.cpp  SetOf4s.cpp  kmb.cpp  kmb_set1.cpp  kmb_set2.cpp  kmb_set3.cpp  kmb_set4.cpp  kmb_set5.cpp  kmb_set6.cpp  kmb_set7.cpp  kmb_set_abstract.cpp  random_kmb_generator.cpp
src/engine/stat/: stat_win.cpp
src/experiment/: cover4.cpp  experiment_1.cpp  experiment_2.cpp  pgen.cpp
src/include/command/: check_win_cmd.h  find_positions_cmd.h  generate.h  icommand.h  initialize.h  input_cmd.h  load_from_file_cmd.h  mark_cmd.h  print_cmd.h  print_positions_cmd.h  print_result_cmd.h  win_in_cmd.h
src/include/engine/core/: kmb.h  kmb_set6.h  random_kmb_generator.h
src/include/experiment/: experiment_1.h  experiment_2.h
tests/: all7s_t.cpp  constantst.cpp  set_of_4s_t.cpp  shufflet.cpp  test.cpp
(+15 files in other folders)
